--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "emotion": "^9.1.3",
     "emotion-server": "^9.1.3",
     "gatsby": "^2.0.0-beta.17",
+    "gatsby-cli": "^2.4.4",
     "gatsby-image": "^2.0.0-beta.4",
     "gatsby-plugin-emotion": "^2.0.0-beta.2",
     "gatsby-plugin-google-analytics": "^2.0.0-beta.5",
@@ -35,7 +36,8 @@
     "react-dom": "^16.4.0",
     "react-emotion": "^9.1.3",
     "react-helmet": "^5.2.0",
-    "react-id-swiper": "^1.6.6",
+    "react-id-swiper": "^1.6.8",
+    "react-swiper-id": "^1.0.3",
     "tailwindcss": "^0.6.1",
     "typeface-poppins": "0.0.54"
   },
